<resources>
    <string name="app_name">BlackJack2020</string>
    <string name="hp_title_tv">Blackjack Homepage</string>
    <string name="hp_play_btn">Play</string>
    <string name="hp_how_to_play_btn">How to play</string>
    <string name="hp_settings_btn">Settings</string>
    <string name="hp_tips_btn">Tips and Tricks</string>

    <string name="set_title">BlackJack2020 Settings</string>
    <string name="set_ai">Set AI difficulty:</string>
    <string name="set_ai_low">Easy</string>
    <string name="set_ai_mid">Normal</string>
    <string name="set_ai_high">Hard</string>
    <string name="set_funds">Funds: </string>
    <string name="set_current_funds">Poor(test) </string>
    <string name="set_funds_btn">+</string>
    <string name="set_insert_funds">Add me</string>

    <string name="set_card_img">Select Card Design:</string>
    <string name="set_name">Name: </string>
    <string name="set_back">Save and Return</string>
    <string name="set_music">Music</string>
    <string name="btnAdd">Add</string>



    //****************How to Play Page***************
    <string name="how_to_play_title">How to Play!</string>
    <string name="how_to_play_goal">Goal:</string>
    <string name="how_to_play_goal_content">Beat the dealer by getting closer to 21 by adding up the pip number on the card without going over.</string>
    <string name="how_to_play_important_rules">Important Rules:</string>
    <string name="how_to_play_important_rules_content">All face cards count as 10 points and aces can either count as 11 or 1. Otherwise the number on the card is its point value.</string>

    <string name="how_to_play_btn_title">Buttons</string>
    <string name="how_to_play_btn_deal_title">Deal:</string>
    <string name="how_to_play_btn_deal_content">Start a new round.</string>
    <string name="how_to_play_btn_stand_title">Stand:</string>
    <string name="how_to_play_btn_stand_content">Stop dealing cards to you.</string>
    <string name="how_to_play_btn_hit_title">Hit:</string>
    <string name="how_to_play_btn_hit_content">Deal another card.</string>
    <string name="how_to_play_btn_double_down_title">Double Down:</string>
    <string name="how_to_play_btn_double_down_content">Stop dealing cards and double your current bet.</string>
    <string name="how_to_play_btn_split_title">Split:</string>
    <string name="how_to_play_btn_split_content">When dealt doubles split each card into new bet and deal a new card to each bet to be played separately.</string>
    <string name="how_to_play_btn_fold">Fold:</string>
    <string name="how_to_play_btn_fold_content">Stop play and exit current round.</string>


    //****************Tips N Tricks Page***************
    <string name="tips_n_tricks_title">Tips N Tricks!</string>
<!--    <string name="tips_n_tricks_tip_1">Tip 1:</string>-->
<!--    <string name="tips_n_tricks_1">Stand when your hand is 12 through 16 and the dealer has a 2 through 6.</string>-->
<!--    <string name="tips_n_tricks_tip_2">Tip 2:</string>-->
<!--    <string name="tips_n_tricks_2">Hit when your hand is 12 through 16 and the dealer has 7 through Ace.</string>-->
<!--    <string name="tips_n_tricks_tip_3">Tip 3:</string>-->
<!--    <string name="tips_n_tricks_3">Always split Aces and 8s.</string>-->
<!--    <string name="tips_n_tricks_tip_4">Tip 4:</string>-->
<!--    <string name="tips_n_tricks_4">Double down when you have 11 and the dealer has 2 through 10.</string>-->
<!--    <string name="tips_n_tricks_tip_5"></string>-->
<!--    <string name="tips_n_tricks_5"></string>-->
    <string name="tip_label_text">Tip </string>


    //*******************Play Page************************
    <string name="play_deal_btn">Deal</string>
    <string name="play_hit_btn">Hit</string>
    <string name="play_score_btn">Score</string>
    <string name="play_new_game_btn">New Game</string>
    <string name="play_my_hand_btn">My Hand</string>
    <string name="play_stand_btn">Stand</string>
    <string name="play_my_hand">Players Hand</string>
    <string name="play_ai_hand">Dealers Hand</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_clear_btn">Clear</string>


</resources>