<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/set_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/set_title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/set_ai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_ai"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/set_ai_easy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_ai_low" />

        <RadioButton
            android:id="@+id/set_ai_normal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_ai_mid" />

        <RadioButton
            android:id="@+id/set_ai_hard_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_ai_high" />

    </RadioGroup>

    <TextView
        android:id="@+id/set_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_card_img"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cardface3"
            android:layout_width="180dp"
            android:layout_height="170dp"
            android:layout_weight="1"
            android:background="@drawable/card_face_3"
            android:checked="false" />

        <RadioButton
            android:id="@+id/cardface2"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_face_1" />

        <RadioButton
            android:id="@+id/cardface1"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/card_face_2" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/set_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/set_return_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/music_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_music"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>