<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <TextView
        android:id="@+id/play_my_hand"
        android:layout_width="314dp"
        android:layout_height="0dp"
        android:layout_marginBottom="156dp"
        android:text="Hellome"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/play_betbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="PlayersHand" />

    <TextView
        android:id="@+id/play_ai_hand"
        android:layout_width="318dp"
        android:layout_height="85dp"
        android:layout_marginTop="30dp"
        android:text="Hellome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ai_hand" />

    <SeekBar
        android:id="@+id/play_betbar"
        android:layout_width="276dp"
        android:layout_height="28dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/play_score"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="44dp"
        android:text="Score: 21"
        app:layout_constraintBottom_toTopOf="@+id/play_betbar"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="ScoreSucka" />

    <TextView
        android:id="@+id/play_cash"
        android:layout_width="64dp"
        android:layout_height="23dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="Cash"
        app:layout_constraintBottom_toTopOf="@+id/play_betbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_score"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Total Cash" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="294dp"
        android:layout_height="113dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/play_new_game_btn"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:text="@string/play_new_game_btn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/play_hit_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/play_hit_btn" />

            <Button
                android:id="@+id/play_stand_btn"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/play_stand_btn" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/card1"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="101dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="@+id/play_my_hand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/play_ai_hand"
        app:srcCompat="@drawable/card_face_3" />

    <ImageView
        android:id="@+id/card2"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="73dp"
        app:layout_constraintBottom_toBottomOf="@+id/play_my_hand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/play_ai_hand"
        app:srcCompat="@drawable/card_face_3" />


</androidx.constraintlayout.widget.ConstraintLayout>